<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/yellow100"
    android:id="@+id/layout">

    <EditText
        android:id="@+id/editTextName"
        style="@style/login_text"
        android:layout_width="259dp"
        android:layout_height="46dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="75dp"
        android:background="@drawable/button_style"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/type_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Spinner
        android:id="@+id/spinnerYear"
        android:layout_width="254dp"
        android:layout_height="41dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="75dp"
        android:background="@drawable/button_style"
        android:entries="@array/spinner_year"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <Spinner
        android:id="@+id/spinnerType"
        android:layout_width="254dp"
        android:layout_height="41dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="75dp"
        android:background="@drawable/button_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerYear" />

    <RadioGroup
        android:id="@+id/RadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="75dp"
        android:background="@drawable/button_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerType">

        <TextView
            android:id="@+id/textView"
            style="@style/button_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/choose_avaliation" />

        <RadioButton
            android:id="@+id/radioButtonBad"
            style="@style/button_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bad" />

        <RadioButton
            android:id="@+id/radioButtonGood"
            style="@style/button_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/good" />

        <RadioButton
            android:id="@+id/radioButtonGreat"
            style="@style/button_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Great" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonRegister"
        style="@style/button_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="95dp"
        android:background="@drawable/button_style"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RadioGroup" />

    <TextView
        android:id="@+id/textViewResponse"
        style="@style/button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />

    <Button
        android:id="@+id/button2"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/popcorn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>